--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-REACT_APP_API_URL=http://localhost:8010/proxy
+#REACT_APP_API_URL=http://localhost:8010/proxy
+REACT_APP_API_URL=http://diplomabackend.test
 REACT_APP_WEBSOCKET_URL=ws://localhost:9090
 
