--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
     "clsx": "^1.2.1",
+    "crypto-js": "^4.1.1",
+    "laravel-echo": "^1.11.4",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jss": "^10.10.0",
@@ -20,11 +23,15 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
     "react-scrollable-feed": "^1.3.2",
+    "reduxjs-toolkit-persist": "^7.2.1",
+    "socket.io-client": "^2.3.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
+    "@types/crypto-js": "^4.1.1",
+    "@types/lodash": "^4.14.195",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "eslint-config-prettier": "^8.3.0",
