--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "diploma-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy":"http://95.163.236.29",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
